test-framework/sudo-compliance-tests/src/sudo/flag_list/short_format/snapshots/cwd_override_across_runas_groups.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/short_format/mod.rs
assertion_line: 169
expression: stdout
---
User root may run the following commands on container:
    (root) CWD=* /usr/bin/true
    (ferris) CWD=* /usr/bin/false, CWD=/home /bin/ls
