test-framework/sudo-compliance-tests/src/sudo/flag_list/short_format/snapshots/multiple_lines.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/short_format/mod.rs
assertion_line: 245
expression: stdout
---
User root may run the following commands on container:
    (root) /usr/bin/true, /usr/bin/false
    (root) /bin/ls
