test-framework/sudo-compliance-tests/src/sudo/flag_list/short_format/snapshots/negated_command_alias.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/short_format/mod.rs
assertion_line: 138
expression: stdout
---
User root may run the following commands on container:
    (root) /bin/ls, !/usr/bin/true, /usr/bin/false
