test-framework/sudo-compliance-tests/src/sudo/flag_list/short_format/snapshots/nopasswd_passwd_override_across_runas_groups.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/short_format/mod.rs
assertion_line: 212
expression: stdout
---
User root may run the following commands on container:
    (root) NOPASSWD: /usr/bin/true
    (ferris) NOPASSWD: /usr/bin/false, PASSWD: /bin/ls
